Added tests for Project